# PentaSignfb

./: README.md  manifest.json  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: main.yml
docs/: blueprint.md
github/workflows/: deploy.yml
public/: viewer.html
public/penpot-plugin/: code.js  manifest.json  style.css  ui.html  ui.js
src/: README.md  package.json
src/ai/: dev.ts
src/ai/flows/: verify-document-signature.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/github/: page.tsx
src/app/manifest/: page.tsx
src/app/sign/: page.tsx
src/app/verify/: actions.ts  page.tsx
src/components/: header.tsx  pentasign-logo.tsx  sidebar-nav.tsx
src/lib/: crypto.ts  placeholder-images.json
src/lib/pentasign_crypto_wasm/: Cargo.toml  pentasign_crypto_wasm.d.ts  pentasign_crypto_wasm.js
src/lib/pentasign_crypto_wasm/src/: lib.rs  pattern.rs
src/plugin/: plugin.ts
