[package]
name = "pentasign-crypto-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# ed25519-dalek uses rand_core; we also use it directly
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Enable OsRng in rand_core by turning on its "getrandom" feature
rand_core = { version = "0.6", features = ["getrandom"] }

# Wire getrandom to JS (window.crypto.getRandomValues) in wasm
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
