[package]
name = "pentasign_crypto_wasm"
version = "0.1.0"
edition = "2021"
description = "WASM module for PentaSign visual and cryptographic signatures"
authors = ["Firebase Studio"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"

# SVG and pattern generation
svg = "0.13"
fastrand = "2.0"
